--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "homepage": "https://github.com/rafaelcaet/challenger-01#readme",
   "dependencies": {
     "@fastify/cors": "^11.0.0",
-    "fastify": "^5.2.1"
+    "@fastify/error": "^4.1.0",
+    "fastify": "^5.2.1",
+    "http-errors": "^2.0.0",
+    "natural": "^8.0.1"
   },
   "devDependencies": {
+    "@types/http-errors": "^2.0.4",
     "@types/node": "^22.13.10",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
